<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MasterMind</string>
    <string name="ad_loading">Loading Ad &#8230;</string>
    <string name="instructions">Instructions</string>
    <string name="highscores">HighScores</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>

    <!-- MainMenuActivity -->
    <string name="play">Play Game</string>

    <!-- SettingsActivity -->
    <string name="clear_highscore">Clear Highscores</string>
    <string name="sound_toggle_button">Toggle Sound</string>

    <!-- Mastermind -->
    <string name="gotoMainMenu">Go to Main Menu</string>

    <!-- EndGame -->
    <string name="youwin">You Win</string>
    <string name="youlose">You Lose</string>
    <string name="nameforhighscore">Enter your name for Highscore:</string>

    <!-- Instructions -->
    <string name="text1">MasterMind is a mathematical guessing game where computer makes a Secret Combination of 4 colors out of 6 colors and you have to guess it in 10 tries.</string>
    <string name="text2">Tap a peg on Hotbar to select it. Tap again to deselect or tap any other peg to select it</string>
    <string name="text3">Tap the pegs in play area to fill them with the selected colour and tap the confirm button on right of pegs to confirm your combination. Only one row, ie guess, is active at a time.</string>
    <string name="text4">Use the flags for guessing a better combination. A white flag means that you selected a correct colour and placed it in correct position. A red flag means that the selected color is correct but its position is not.</string>

</resources>
