<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    
    <TextView android:id="@+id/settings_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true" >

        <ImageButton android:id="@+id/settings_sound_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sound_toggle_button"
            android:src="@drawable/ic_sound_on"
            android:onClick="soundToggleClick"
            android:padding="10sp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent" />

        <Button android:id="@+id/settings_highscore_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp" android:paddingBottom="15dp"
            android:paddingLeft="30dp" android:paddingRight="30dp"
            android:onClick="highscoreResetClick"
            android:text="@string/clear_highscore"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@drawable/button" />

    </LinearLayout>

</RelativeLayout>
