<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView android:id="@+id/instructions_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/instructions"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/ins1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instructions1"
            android:contentDescription="@string/instructions" />

        <TextView
            android:id="@+id/ins2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instructions2"
            android:contentDescription="@string/instructions" />

        <TextView
            android:id="@+id/ins3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instructions3"
            android:contentDescription="@string/instructions" />

    </LinearLayout>

</ScrollView>
